--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
